[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/icons/glyphs/plus_white_large.png" type="Texture" id=1]
[ext_resource path="res://Scripts/EditDeck.gd" type="Script" id=2]
[ext_resource path="res://assets/icons/buttons/trash.png" type="Texture" id=3]
[ext_resource path="res://Scripts/DeleteCardRegion.gd" type="Script" id=4]
[ext_resource path="res://Scenes/AppBackground.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Edit/SimpleColorPicker.tscn" type="PackedScene" id=6]
[ext_resource path="res://Styles/MainTheme.tres" type="Theme" id=7]
[ext_resource path="res://assets/icons/buttons/cancel_small.png" type="Texture" id=8]
[ext_resource path="res://assets/icons/buttons/save_small.png" type="Texture" id=9]
[ext_resource path="res://assets/icons/buttons/delete_small.png" type="Texture" id=10]
[ext_resource path="res://Scenes/LayoutHelpers/TabDock.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/DeleteDialog.gd" type="Script" id=12]

[node name="EditDeck" type="Node2D"]
script = ExtResource( 2 )

[node name="UI" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
theme = ExtResource( 7 )

[node name="AppBackground" parent="UI" instance=ExtResource( 5 )]

[node name="DeckNameEdit" type="LineEdit" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -180.0
margin_top = 17.0
margin_right = 180.0
margin_bottom = 79.0
theme_type_variation = "EditablePageTitle"
align = 1
clear_button_enabled = true
placeholder_text = "Deck Name"

[node name="TabDock" parent="UI" instance=ExtResource( 11 )]
margin_left = 832.0
margin_top = 7.0
margin_right = 939.0
margin_bottom = 59.0
rect_scale = Vector2( 0.85, 0.85 )
theme_type_variation = "TabPanelTop"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TabDock"]
margin_left = 2.0
margin_right = 105.0
margin_bottom = 50.0

[node name="SaveButton" type="Button" parent="UI/TabDock/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
theme = ExtResource( 7 )
icon = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CancelButton" type="Button" parent="UI/TabDock/HBoxContainer"]
margin_left = 54.0
margin_right = 103.0
margin_bottom = 50.0
theme = ExtResource( 7 )
icon = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DeleteButton" type="Button" parent="UI/TabDock/HBoxContainer"]
visible = false
margin_left = 107.0
margin_right = 157.0
margin_bottom = 52.0
icon = ExtResource( 10 )

[node name="ScrollContainer" type="ScrollContainer" parent="UI"]
anchor_left = 0.1
anchor_top = 0.25
anchor_right = 0.9
anchor_bottom = 1.0
margin_left = -1.40001
margin_right = -1.40002
scroll_horizontal_enabled = false

[node name="Columns" type="HBoxContainer" parent="UI/ScrollContainer"]
unique_name_in_owner = true
margin_right = 819.2
margin_bottom = 400.0
size_flags_horizontal = 3
custom_constants/separation = 30

[node name="AddColumnButton" type="Button" parent="UI/ScrollContainer/Columns"]
margin_right = 200.0
margin_bottom = 400.0
rect_min_size = Vector2( 200, 400 )
size_flags_vertical = 0
icon = ExtResource( 1 )
icon_align = 1

[node name="DeleteCardRegion" type="PanelContainer" parent="UI"]
visible = false
margin_left = 14.0
margin_top = 6.0
margin_right = 168.0
margin_bottom = 60.0
theme_type_variation = "TabPanelTop"
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="UI/DeleteCardRegion"]
margin_left = 51.0
margin_right = 103.0
margin_bottom = 52.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 3 )

[node name="SimpleColorPicker" parent="UI" instance=ExtResource( 6 )]
margin_left = 7.0
margin_top = 193.0
margin_right = 59.0
margin_bottom = 463.0
rect_scale = Vector2( 0.85, 0.85 )
theme_type_variation = "TabPanelLeft"

[node name="DeleteDialog" type="WindowDialog" parent="UI"]
margin_left = 356.0
margin_top = 265.0
margin_right = 758.0
margin_bottom = 409.0
script = ExtResource( 12 )

[node name="Label" type="Label" parent="UI/DeleteDialog"]
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.1
text = "Are you sure you want to delete this deck?"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/DeleteDialog"]
anchor_left = 0.1
anchor_top = 0.6
anchor_right = 0.9
anchor_bottom = 0.9
custom_constants/separation = 70
alignment = 1

[node name="CancelDeleteButton" type="Button" parent="UI/DeleteDialog/HBoxContainer"]
margin_left = 21.0
margin_right = 128.0
margin_bottom = 43.0
theme_type_variation = "GrayButton"
text = "Cancel"

[node name="ConfirmDeleteButton" type="Button" parent="UI/DeleteDialog/HBoxContainer"]
margin_left = 198.0
margin_right = 300.0
margin_bottom = 43.0
theme_type_variation = "RedButton"
text = "Delete"

[connection signal="pressed" from="UI/TabDock/HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="UI/TabDock/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="UI/TabDock/HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="UI/ScrollContainer/Columns/AddColumnButton" to="." method="_on_AddColumnButton_pressed"]
[connection signal="confirmed" from="UI/DeleteDialog" to="." method="_on_DeleteDialog_confirmed"]
[connection signal="pressed" from="UI/DeleteDialog/HBoxContainer/CancelDeleteButton" to="UI/DeleteDialog" method="_on_CancelDeleteButton_pressed"]
[connection signal="pressed" from="UI/DeleteDialog/HBoxContainer/ConfirmDeleteButton" to="UI/DeleteDialog" method="_on_ConfirmDeleteButton_pressed"]
